--- a/PlottingScripts/MakeFigures.Rmd
+++ b/PlottingScripts/MakeFigures.Rmd
@@ -26,6 +26,7 @@ library(cowplot)
 library(data.table)
 library(tidyverse)
 library(purrr)
+library(ggrepel)
 
 #Directories
 DataPath <- '~/Documents/LegacyData/PlottingScripts/ProcessedData/'
@@ -84,7 +85,7 @@ GWAS <- ggplot(NotSig, aes(x = Pos,
                          labeller = facet_labeller) +
               scale_y_continuous(expand = c(0,0)) +
               scale_color_manual(values = rep(
-                        c("grey", "black"), 
+                        c("grey60", "grey40"), 
                         22)) +
               labs(y = '-log10(p)', x = 'Chromosome') +
               guides(color = FALSE) + 
@@ -118,7 +119,9 @@ join <- merge(join,
               all.x=T)
 join <- join[which(join$JPT_MAF + join$NAG_MAF != 0),] #remove fixed
 jj <- join[complete.cases(join),]
+```
 
+```{r}
 SFS <- 
   ggplot(join, 
          aes(x = NAG_MAF, 
@@ -126,10 +129,11 @@ SFS <-
   geom_bin2d(binwidth = c(1/884, 1/104)) +
   geom_point(data = jj,
              color = 'blue',
-             size = 0.8, 
+             size = 1, 
              alpha = 0.7, 
              shape = 3) +
-  scale_fill_distiller(palette = "Greys",
+  scale_fill_gradient(low = "grey80",
+                      high = "black",
                        trans = "log",
                        breaks = c(1,10,100,
                                   1000,10000,
@@ -141,29 +145,47 @@ SFS <-
                      limits = c(0,0.5)) +
   scale_y_continuous(expand = c(0.01,0.01), 
                      limits = c(0,0.5)) + 
-  xlab(label = "Nagahama Frequency") +
+  labs(x = "Nagahama Frequency",
+       y = "1000 Genomes Project Frequency") +
   theme_classic() +
-  theme(axis.line = element_blank(), 
-        axis.title.y = element_blank(), 
-        axis.text.y = element_blank(), 
-        axis.ticks.y = element_blank())
+  theme(axis.line = element_blank())
+
+freq_gw <- as.data.frame(table(round(join$JPT_MAF, 2)))
+freq_gw <- freq_gw %>% filter(Var1 != "0")
+freq_gw$proportion <- freq_gw$Freq / sum(freq_gw$Freq) *100
+freq_gw$group <- "All SNPs"
+freq_gw$Var1 <- as.numeric(as.character(freq_gw$Var1))
+
+freq_sig <- as.data.frame(table(round(jj$JPT_MAF, 2)))
+freq_sig$proportion <- freq_sig$Freq / sum(freq_sig$Freq) *100
+freq_sig$group <- "Suspicious SNPs"
+freq_sig$Var1 <- as.numeric(as.character(freq_sig$Var1))
+
+freq <- rbind(freq_sig, freq_gw)
+freq$Var1 <- as.numeric(as.character(freq$Var1))
 
 HIST <- 
-  ggplot(jj, 
-         aes(x = JPT_MAF)) +
-  geom_histogram(binwidth = 0.01, 
-                 fill = 'grey') +
-  scale_x_continuous(limits = c(0,1),
+  ggplot()+
+  geom_histogram(data = freq_gw,
+                 aes(x=Var1, 
+                     y = proportion), 
+                 fill = 'grey',
+                 stat = "identity")+
+  geom_histogram(data = freq_sig,
+                 aes(x=Var1, 
+                     y = proportion),
+                 fill = 'blue',
+                 alpha=0.7,
+                 stat = "identity")+
+  coord_flip()+
+  scale_x_continuous(limits = c(0,0.5),
                      expand = c(0.01, 0.01)) +
-  scale_y_reverse(expand = c(0.01, 0.01), 
-                  breaks = c(10, 50, 100)) +
-  labs(x = "1000 Genomes Project Frequency",
-       y = "") +
-  coord_flip() +
+  scale_y_reverse(expand = c(0.01, 0.01))+
+  labs(y="Density",
+       x="Allele Frequency") +
   theme_classic() +
-  theme(axis.line = element_blank(),
-        axis.text.x = element_text(angle = 90)) +
-  xlim(c(0,0.5))
+  theme(axis.line = element_blank())
+
 
 B <- 
   plot_grid(HIST, 
@@ -171,22 +193,23 @@ B <-
             nrow = 1, 
             rel_widths = c(3, 5), 
             align = 'h', 
-            labels=c('','B'))
+            labels=c('','C'))
 
 #rm(join)#save memory
 #rm(SFS)
-B
+#B
 ```
 
 
 ## Mutation Spectrum enrichment
-```{r,fig.height=5,fig.width=6}
+```{r,fig.height=3,fig.width=9}
 #load mutation spectrum for suspicious SNPs
 SNP <- readRDS(paste0(DataPath,
                    'SNP_Context.rds'))
 #load mutation spectrum for control SNPs
 rSNP <- readRDS(paste0(DataPath,
                    'rSNP_Context.rds'))
+
 #make color scale comparable between plots
 maxFreq <- max(SNP$Freq)
 
@@ -197,11 +220,11 @@ plt <- ggplot(data,
                   y = Start, 
                   fill = Freq)) +
     geom_tile() +
-    facet_grid(Mut~., 
+    facet_grid(.~Mut,
                switch = "y") +
-    labs(subtitle = name) +
+    labs(y = name) +
     theme_classic() +
-    theme(axis.title = element_blank(),
+    theme(axis.title.x = element_blank(),
           axis.line = element_blank(),
           legend.position = "bottom",
           strip.placement = "outside",
@@ -209,16 +232,18 @@ plt <- ggplot(data,
           panel.border = element_rect(colour = "black", 
                                       fill = NA, 
                                       size = 1)) +
+  
+    scale_y_discrete(position = "bottom") +
     scale_fill_gradient(limits = c(0, maxFreq),
                         low = 'white', 
                         high = 'blue',
                         guide = guide_legend(title = 'Count',
-                                             title.position = "top"))
+                                             direction = 'vertical'))
 return(plt)
 }
 
-SNPplt <- plotContext(SNP %>% filter(Mut == 'A-> C'),'Suspicious SNPs')
-rSNPplt <- plotContext(rSNP %>% filter(Mut == 'A-> C'),'Control SNPs')
+SNPplt <- plotContext(SNP,'Suspicious SNPs')
+rSNPplt <- plotContext(rSNP,'Control SNPs')
 
 #extract legend
 #https://github.com/hadley/ggplot2/wiki/Share-a-legend-between-two-ggplot2-graphs
@@ -235,13 +260,16 @@ A <- plot_grid(plot_grid(
               SNPplt + 
                 theme(legend.position = "none"),
               rSNPplt + 
-                theme(legend.position = "none")),
+                theme(legend.position = "none"),
+              nrow = 2),
               mylegend,
-              nrow = 2,
-              rel_heights = c(1, 0.5),
+              ncol = 2,
+              rel_widths = c(1, 0.1),
               labels = c('A'))
 
 A
+
+
 ```
 ## Put all plots together and save
 ```{r,fig.height=11,fig.width=8}
@@ -252,7 +280,7 @@ fig1 <- plot_grid(A,
                GWAS,
                ncol = 1,
                rel_heights = c(1,2,1),
-               labels = c('A','B','C'))
+               labels = c('A','B','D'))
 
 #figure takes time to save so skip if already done
 #if(!file.exists(paste0(figurePath,
@@ -260,7 +288,7 @@ fig1 <- plot_grid(A,
 ggsave(paste0(figurePath,
               'Figure1.1.jpg'),
        fig1, 
-       height = 12,
+       height = 14,
        width = 12)
 #ggsave(paste0(figurePath,
 #              'Figure1.pdf'),
@@ -268,8 +296,12 @@ ggsave(paste0(figurePath,
 #       height = 12,
 #       width = 12)
 #}
-fig1
+#fig1
 
+
+
+```
+```{r}
 #save memory
 rm(GWAS)
 rm(fig1)
